cluster/apps/media/jellyfin/sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: &app jellyfin
  namespace: media
spec:
  selector:
    matchLabels:
      app: *app
  serviceName: *app
  replicas: 1
  template:
    metadata:
      labels:
        app: *app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: feature.node.kubernetes.io/custom-intel-gpu
                    operator: In
                    values:
                      - "true"
      volumes:
        - name: cache
          emptyDir: {}
        - name: transcode
          emptyDir:
            sizeLimit: 16Gi
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config-v1
        - name: media
          nfs:
            server: proxmox0.i.${DOMAIN}
            path: /Media
        - name: ca-certs
          hostPath:
            path: /etc/ssl/certs/ca-certificates.crt
            type: File
      securityContext:
        runAsUser: 1001
        runAsGroup: 1850800007
        fsGroup: 1850800007
        # fsGroupChangePolicy: "OnRootMismatch"
        supplementalGroups:
          - 44
          - 110
          - 1850800007
          - 1850800003
      containers:
      - name: *app
        image: "ghcr.io/stefanabl/jf-custom:10.11.10"
        resources:
          requests:
            gpu.intel.com/i915: 1
            cpu: 100m
            memory: 1Gi
          limits:
            gpu.intel.com/i915: 1
            memory: 4Gi
        ports:
        - containerPort: 8096
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: config
          mountPath: /var/lib/jellyfin
        - name: cache
          mountPath: /cache
        - name: transcode
          mountPath: /transcode
        - name: media
          mountPath: /mnt/medien
          readOnly: true
        - name: ca-certs
          mountPath: /etc/ssl/certs/ca-certificates.crt
          readOnly: true
